Improve the tutorial

--- a/topics/translatomics/tutorials/isoform-level-ribosome-occupancy-estimation/tutorial.bib
+++ b/topics/translatomics/tutorials/isoform-level-ribosome-occupancy-estimation/tutorial.bib
@@ -18,4 +18,16 @@
   pages={1681},
   year={2018},
   publisher={Nature Publishing Group}
-}}
+}
+
+@article{kiniry2019computational,
+	  title={Computational methods for ribosome profiling data analysis},
+	    author={Kiniry, Stephen J and Michel, Audrey M and Baranov, Pavel V},
+	      journal={Wiley Interdisciplinary Reviews: RNA},
+	        year={2019},
+		  publisher={Wiley Online Library}
+}
+
+
+
+
