--- a/topics/translatomics/tutorials/visualization/tutorial.bib
+++ b/topics/translatomics/tutorials/visualization/tutorial.bib
@@ -28,13 +28,12 @@
   title = {Community-Driven Data Analysis Training for Biology},
   journal = {Cell Systems}
 }
-@article{jakobsson2017methylation,
-  title={Methylation of human eukaryotic elongation factor alpha (eEF1A) by a member of a novel protein lysine methyltransferase family modulates mRNA translation},
-  author={Jakobsson, Magnus E and Ma{\l}ecki, J{\k{e}}drzej and Nilges, Benedikt S and Moen, Anders and Leidel, Sebastian A and Falnes, P{\aa}l {\O}},
-  journal={Nucleic acids research},
-  volume={45},
-  number={14},
-  pages={8239--8254},
-  year={2017},
-  publisher={Oxford University Press}
+@misc{transcriptomics-rna-seq-viz-with-heatmap2,
+    author = "Maria Doyle",
+    title = "Visualization of RNA-Seq results with heatmap2 (Galaxy Training Materials)",
+    year = "2019",
+    month = "07",
+    day = "17",
+    url = "\url{/training-material/topics/transcriptomics/tutorials/rna-seq-viz-with-heatmap2/tutorial.html}",
+    note = "[Online; accessed Mon Dec 16 2019]"
 }
