--- a/topics/translatomics/tutorials/predict-ORFs/tutorial.bib
+++ b/topics/translatomics/tutorials/predict-ORFs/tutorial.bib
@@ -17,4 +17,14 @@
 		    year={2015},
 		      publisher={eLife Sciences Publications Limited}
 }
+@article{fields2015regression,
+	  title={A regression-based analysis of ribosome-profiling data reveals a conserved complexity to mammalian translation},
+	    author={Fields, Alexander P and Rodriguez, Edwin H and Jovanovic, Marko and Stern-Ginossar, Noam and Haas, Brian J and Mertins, Philipp and Raychowdhury, Raktima and Hacohen, Nir and Carr, Steven A and Ingolia, Nicholas T and others},
+	      journal={Molecular cell},
+	        volume={60},
+		  number={5},
+		    pages={816--827},
+		      year={2015},
+		        publisher={Elsevier}
+}
 
